--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -13,10 +13,10 @@
     </div>
 {% endrow %}
 
+{% include "blog/post-comments.html" %}
+
 {% row %}
-    
         {% recent_posts post %}
-   
 {% endrow %}
 
 
